@@ -22,7 +22,7 @@ def getArgs():
 
     parser.add_argument('-s', '--server', dest='server', action='store',
         required=False, default='dev',
-        help='db server: adhoc, prod, or dev (default)')
+        help='db server: prod, or dev (default)')
 
     parser.add_argument('-o', '--output', dest='outputFile', action='store',
         required=False, default='pubmedIDs.tsv',
@@ -33,9 +33,6 @@ def getArgs():
 
     args =  parser.parse_args()
 
-    if args.server == 'adhoc':
-	args.host = 'mgi-adhoc.jax.org'
-	args.db = 'mgd'
     if args.server == 'prod':
 	args.host = 'bhmgidb01'
 	args.db = 'prod'
