@@ -67,7 +67,7 @@ def getArgs():
 
     parser.add_argument('-s', '--server', dest='server', action='store',
         required=False, default=defaultHost,
-        help='db server. Shortcuts:  adhoc, prod, dev, test. (Default %s)' %
+        help='db server. Shortcuts:  prod, dev, test. (Default %s)' %
                 defaultHost)
 
     parser.add_argument('-d', '--database', dest='database', action='store',
@@ -76,10 +76,7 @@ def getArgs():
 
     args =  parser.parse_args()
 
-    if args.server == 'adhoc':
-        args.host = 'mgi-adhoc.jax.org'
-        args.db = 'mgd'
-    elif args.server == 'prod':
+    if args.server == 'prod':
         args.host = 'bhmgidb01.jax.org'
         args.db = 'prod'
     elif args.server == 'dev':
