@@ -1,3 +1,11 @@
+TAG: autolittriage-6-0-25-1
+DATE: 01/27/2025
+STAFF: lec
+wts2-1605/e4g-124/Retire AdHoc Server : remove local dependencies" ; git push
+        modified:   Backpopulate/getMgiPubmedIDs.py
+        modified:   sdGetBackPopulated.py
+        modified:   sdGetRawCurGroups.py
+
 TAG: autolittriage-6-0-23-2
 TAG: autolittriage-6-0-23-1
 DATE: 03/25/2024
